# aware

./: AGENTS.md  README.md
workspaces/aware_kernel/languages/aware/grammar/tree_sitter/: .gitignore  README.md  pyproject.toml  setup.py
workspaces/aware_kernel/languages/dart/grammar/tree_sitter/: pyproject.toml  setup.py
workspaces/aware_kernel/languages/python/grammar/tree_sitter/: pyproject.toml  setup.py
workspaces/aware_kernel/languages/rust/tooling/: pyproject.toml
workspaces/aware_kernel/languages/rust/tooling/rust_tooling/: __init__.py  cargo.py
workspaces/aware_kernel/languages/rust/tooling/tests/: test_cargo_toolchain.py
workspaces/aware_kernel/languages/sql/grammar/grammar/: .gitignore  README.md  pyproject.toml
workspaces/aware_kernel/languages/sql/grammar/tree_sitter/: .gitignore  pyproject.toml  setup.py
workspaces/aware_kernel/libs/orm/: CHANGELOG.md  README.md  pyproject.toml
workspaces/aware_kernel/libs/orm/aware_orm/: __init__.py  _support.py  filters.py  helpers.py  query_builder.py  query_spec.py  registry.py  testing.py
workspaces/aware_kernel/libs/orm/aware_orm/cache/: identity_map.py
workspaces/aware_kernel/libs/orm/aware_orm/db/: __init__.py  boot.py  contracts.py  schema_registry.py
workspaces/aware_kernel/libs/orm/aware_orm/graph/: __init__.py  config_registry.py  cte_builder.py  plan_cache.py  plan_compiler.py  plan_context.py  projection_builder.py  query_executor.py  runtime.py  serialization.py
workspaces/aware_kernel/libs/orm/aware_orm/local_state/: __init__.py  sqlite.py
workspaces/aware_kernel/libs/orm/aware_orm/models/: __init__.py  base_model.py  branch_mixin.py  crud_mixin.py  introspection.py  orm_model.py  query_mixin.py  relationship_mixin.py
workspaces/aware_kernel/libs/orm/aware_orm/projection/: __init__.py  plan.py  runtime.py  serialization.py
workspaces/aware_kernel/libs/orm/aware_orm/query/: __init__.py  graph_loader.py  graph_spec.py
workspaces/aware_kernel/libs/orm/aware_orm/runtime/: __init__.py  bootstrap_context.py  bundle_binding.py  bundle_runtime_install.py  bundle_sql_metadata.py  class_resolver.py  db_boot.py  errors.py  graph_artifacts.py  graph_binding.py  invocation.py  models_manifest.py  ocg_migrations.py  package_artifacts.py  package_bootstrap.py  package_install.py  plan_registry.py  relationship_strategies.py  sql_metadata.py
workspaces/aware_kernel/libs/orm/aware_orm/session/: __init__.py  autobind.py  branch_session_registry.py  change_collector.py  current_session_ctx.py  execution_guard.py  mutation_log.py  session.py  session_context.py  session_enums.py  session_provider.py
workspaces/aware_kernel/libs/orm/aware_orm/sql_generator/: __init__.py  _filter_translator.py  generator.py  graph_generator_plan.py
workspaces/aware_kernel/libs/orm/docs/: ORM_RELEASE_READINESS_MATRIX.md  OSS_CLEAN_LATEST_AUDIT.md
workspaces/aware_kernel/libs/orm/docs/cache/: identity_map.md
workspaces/aware_kernel/libs/orm/docs/graph/: query_mixin.md
workspaces/aware_kernel/libs/orm/docs/models/: crud.md
workspaces/aware_kernel/libs/orm/docs/session/: runtime.md
workspaces/aware_kernel/libs/orm/scripts/: run_postgres_ci_proof.py
workspaces/aware_kernel/libs/orm/tests/: conftest.py  test_branch_mixin.py  test_fs_backend.py  test_introspection_contract.py  test_relationship_mixin.py  test_session_integration.py
workspaces/aware_kernel/libs/orm/tests/cache/: test_identity_map.py
workspaces/aware_kernel/libs/orm/tests/graph/: test_cte_builder.py  test_graphsql_plan_stats.py  test_plan_components.py  test_plan_context.py  test_plan_generator.py  test_plan_serialization.py  test_projection_builder.py  test_query_mixin_graph.py  test_runtime.py
workspaces/aware_kernel/libs/orm/tests/local_state/: test_sqlite_contract.py
workspaces/aware_kernel/libs/orm/tests/models/: test_base_model_invocation_value.py  test_introspection_optional_none.py
workspaces/aware_kernel/libs/orm/tests/projection/: test_projection_plan_serialization.py  test_projection_runtime_merge.py
workspaces/aware_kernel/libs/orm/tests/runtime/: test_bootstrap_helpers.py  test_bundle_sql_metadata_composition.py  test_class_resolver.py  test_db_boot_adapters.py  test_db_boot_contract_shim.py  test_db_boot_execution.py  test_db_boot_kernel_sql_roots.py  test_db_boot_plan.py  test_db_boot_runtime_shim_surface.py  test_db_schema_registry.py  test_environment_binding.py  test_execution_guard_read_only_barrier.py  test_graph_binding_skips_inline_value.py  test_graph_retrieval_contract.py  test_ocg_sql_migrations.py  test_ocg_sql_migrations_postgres.py  test_package_bootstrap_dependency_order.py  test_package_install_avoids_aware_environment_import.py  test_plan_registry.py  test_postgres_runtime_ci_proof.py  test_public_boundary.py  test_query_builder.py  test_query_mixin.py  test_query_mixin_graph_canonical.py  test_service_query_conformance.py  test_service_state_e2e.py  test_session_read_barrier.py  test_sql_metadata_enforcement.py
workspaces/aware_kernel/libs/orm/tests/session/: test_backends.py  test_change_collector_id_normalization.py  test_change_collector_tracked_list.py  test_current_session_ctx_injection.py  test_sqlite_backend.py
workspaces/aware_kernel/libs/orm/tests/sql_generator/: test_filter_translator.py  test_graph_generator.py  test_query_spec.py
workspaces/aware_kernel/libs/types/python/: README.md  pyproject.toml
workspaces/aware_kernel/libs/types/python/aware_types/: __init__.py  json.py  vector.py
workspaces/aware_kernel/libs/types/python/tests/: test_aware_types.py
workspaces/aware_kernel/libs/utils/python/: CHANGELOG.md  README.md  pyproject.toml
workspaces/aware_kernel/libs/utils/python/aware_utils/: __init__.py  aware_root.py  decimal_normalizer.py  description_normalizer.py  hashing.py  io.py  path_utils.py  rotating_log_config.py  safe_copy.py  secrets.py  string_transform.py
workspaces/aware_kernel/libs/utils/python/docs/: USAGE.md  logging.md
workspaces/aware_kernel/libs/utils/python/tests/: test_public_boundary.py  test_public_utils_import_boundary.py  test_secrets.py  (+2 more)
(+4048 files in other folders)
