[project]
name = "aware-orm"
version = "1.0.0"
description = "Installable Aware ORM core for metadata-driven projection indexes and branch-aware sessions."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Aware Team" },
]
requires-python = ">=3.12"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["aware", "orm", "projection", "branch-aware", "metadata"]
dependencies = [
  "pydantic>=2.9.0,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
]

[project.urls]
Homepage = "https://pypi.org/project/aware-orm/"
Source = "https://github.com/aware-network/aware-sdk"
Documentation = "https://github.com/aware-network/aware-sdk/tree/main/workspaces/aware_kernel/libs/orm/README.md"
Changelog = "https://github.com/aware-network/aware-sdk/tree/main/workspaces/aware_kernel/libs/orm/CHANGELOG.md"
Issues = "https://github.com/aware-network/aware-sdk/issues"

[project.optional-dependencies]
postgres = [
  "asyncpg>=0.30.0,<0.31.0",
  "psycopg2-binary>=2.9.9,<3.0.0",
]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.23.0,<0.24.0",
  "pytest-mock>=3.12.0,<4.0.0",
  "testcontainers>=4.5.0,<5.0.0",
  "asyncpg>=0.30.0,<0.31.0",
  "psycopg2-binary>=2.9.9,<3.0.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aware_orm"]
include = [
  "README.md",
  "CHANGELOG.md",
  "LICENSE",
]
exclude = [
  "/aware_orm/bootstrap",
]

[tool.hatch.build.targets.wheel.force-include]
"README.md" = "README.md"
"CHANGELOG.md" = "CHANGELOG.md"
"LICENSE" = "LICENSE"

[tool.hatch.build.targets.sdist]
include = [
  "/aware_orm",
  "/README.md",
  "/CHANGELOG.md",
  "/LICENSE",
  "/pyproject.toml",
]
exclude = [
  "/aware_orm/bootstrap",
  "/docs",
  "/tests",
  "/scripts",
  "/.pytest_cache",
  "**/__pycache__",
  "**/*.pyc",
]
