[project]
name = "aware-types"
version = "0.1.0"
description = "Minimal public helper types for Aware Python SDK and API packages."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "AWARE Team" }
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
]
keywords = ["aware", "types", "json", "sdk"]
dependencies = [
  "pydantic>=2.8.0,<3.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.4.2",
]

[project.urls]
Homepage = "https://pypi.org/project/aware-types/"
Source = "https://github.com/aware-network/aware-sdk"
Documentation = "https://github.com/aware-network/aware-sdk/tree/main/workspaces/aware_kernel/libs/types/python/README.md"
Issues = "https://github.com/aware-network/aware-sdk/issues"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aware_types"]
include = [
  "README.md",
  "aware_types/py.typed",
]
