[project]
name = "tree-sitter-python"
version = "0.23.6"
description = "Python grammar for tree-sitter"
readme = "README.md"
authors = [
  { name = "Max Brunsfeld", email = "maxbrunsfeld@gmail.com" },
  { name = "Amaan Qureshi", email = "amaanq12@gmail.com" },
]
requires-python = ">=3.12"

[build-system]
requires = ['setuptools>=68', 'wheel']
build-backend = "setuptools.build_meta"

[tool.hatch.build.targets.wheel]
packages = ["tree_sitter_python"]
