[project]
name = "sql-grammar"
version = "0.1.0"
description = "SQL grammar"
readme = "README.md"
authors = [
  { name = "Luis Lechuga", email = "luis@aware.run" },
]
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.8.2,<3.0.0",
  "overrides>=7.7.0,<8.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "pglast>=6.6.0,<7.0.0",
  "tree-sitter>=0.24.0,<0.25.0",
  "tree-sitter-sql",
  "aware-code",
  "aware-meta",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1.1,<9.0.0",
  "pytest-asyncio>=0.23.6,<0.24.0",
  "mypy>=1.8.0,<2.0.0",
  "flake8>=7.0.0,<8.0.0",
  "black>=24.2.0,<25.0.0",
  "isort>=5.12.0,<6.0.0",
  "types-protobuf>=5.27.0.20240626",
  "flake8-pyproject>=1.2.3,<2.0.0",
]

[tool.black]
line-length = 120
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 120
known_third_party = []
known_local_folder = ['sql_grammar']
forced_separate = ['aware_core']

[tool.flake8]
max-line-length = 120
extend-ignore = "E266"

[tool.mypy]
plugins = ['pydantic.mypy']
ignore_missing_imports = true
# mypy does not execute PEP-660 editable import hooks (.pth + meta_path finders),
# so workspace editable packages like `tree_sitter_sql` are not discoverable by
# default. Point mypy directly at the editable source root.
mypy_path = ["../tree_sitter"]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sql_grammar"]
include = ["sql_grammar/py.typed"]
