[project]
name = "aware-api-client"
version = "0.1.0"
description = "High-level API client for AWARE network operations"
readme = "README.md"
authors = [
  { name = "AWARE Team" }
]
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.8.0,<3.0.0",
  "aware-types",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aware_api"]
