[project]
name = "aware-code-sdk"
version = "0.1.0"
description = "Code SDK facade over generated Code API DTOs and local semantic contract catalog resolution."
authors = [{ name = "AWARE Team" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aware_code_service_dto",
  "aware-types",
  "pydantic>=2.8.0,<3.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.4.2",
  "pytest-asyncio>=0.23.7",
]

[tool.uv.sources]
aware_code_service_dto = { workspace = true }
aware-types = { workspace = true }

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aware_code_sdk"]
include = ["README.md", "aware_code_sdk/py.typed"]
