[project]
name = "aware-file-system"
version = "0.1.2"
description = "Filesystem watcher and indexing utilities for aware-cli aware_sdk workflows."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "AWARE Team" }
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: System :: Filesystems",
]
keywords = ["aware", "filesystem", "watcher", "automation"]
dependencies = [
  "pyyaml>=6.0.2,<7.0.0",
  "msgpack>=1.1.1,<2.0.0",
  "pydantic>=2.8.2,<3.0.0",
]

[project.optional-dependencies]
native = [
  "rust-tooling",
]
test = [
  "pytest>=8.4.2",
  "pytest-asyncio>=0.23.7",
]

[tool.uv.sources]
rust-tooling = { workspace = true }

[project.urls]
Homepage = "https://pypi.org/project/aware-file-system/"
Source = "https://github.com/aware-network/aware-sdk"
Documentation = "https://github.com/aware-network/aware-sdk/tree/main/workspaces/aware_kernel/modules/filesystem/libs/file_system/README.md"
Changelog = "https://github.com/aware-network/aware-sdk/tree/main/workspaces/aware_kernel/modules/filesystem/libs/file_system/CHANGELOG.md"
Issues = "https://github.com/aware-network/aware-sdk/issues"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aware_file_system"]
include = [
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
  "aware_file_system/py.typed",
]
