[project]
name = "aware-history"
version = "0.1.0"
description = "Aware history runtime module."
authors = [{ name = "AWARE Team" }]
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.8.2,<3.0.0",
  "aware-history-ontology",
]

[project.optional-dependencies]
test = ["pytest>=8.4.2"]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aware_history"]
include = ["aware_history/py.typed"]

[tool.aware.tests]
requires_module = "history"
