[project]
name = "aware-meta"
version = "0.1.0"
description = "Meta handlers for the Aware platform."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "AWARE Team" }
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers"
]
keywords = ["aware", "meta", "handlers"]
dependencies = [
  "aware-code",
  "aware-code-ontology",
  "aware_code_service_dto",
  "aware-content",
  "aware-content-ontology",
  "aware-file-system",
  "aware-grammar",
  "aware-history",
  "aware-history-ontology",
  "aware-meta-ontology",
  "aware-orm",
  "aware-storage",
  "aware-utils",
  "pydantic>=2.8.2,<3.0.0",
  "pyyaml>=6.0.2,<7.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.4.2"
]

[project.urls]
Homepage = "https://pypi.org/project/aware-meta/"
Source = "https://github.com/aware-network/aware-sdk"
Documentation = "https://github.com/aware-network/aware-sdk/tree/main/libs/meta/README.md"
Changelog = "https://github.com/aware-network/aware-sdk/tree/main/libs/meta/CHANGELOG.md"
Issues = "https://github.com/aware-network/aware-sdk/issues"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aware_meta"]
include = [
  "README.md",
  "CHANGELOG.md",
  "LICENSE"
]

[tool.aware.tests]
requires_module = "meta"
