[project]
name = "aware-meta-sdk"
version = "0.1.0"
description = "Meta SDK facade over generated Meta Service API Client."
authors = [{ name = "AWARE Team" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aware-types",
  "aware_meta_service_api",
  "aware_meta_service_dto",
  "aware_ontology_service_dto",
]

[project.optional-dependencies]
test = [
  "pytest>=8.4.2",
  "pytest-asyncio>=0.23.7",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aware_meta_sdk"]
include = ["README.md", "aware_meta_sdk/py.typed"]
