[project]
name = "aware-ontology"
version = "0.1.0"
description = "Ontology runtime handlers and semantic contract for the Aware platform."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "AWARE Team" }
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers"
]
keywords = ["aware", "ontology", "handlers", "semantic-contract"]
dependencies = [
  "aware-code",
  "aware-code-ontology",
  "aware-meta",
  "aware-meta-ontology",
  "aware-ontology-ontology",
  "aware-utils",
]

[project.optional-dependencies]
test = [
  "pytest>=8.4.2"
]

[project.urls]
Homepage = "https://pypi.org/project/aware-ontology/"
Source = "https://github.com/aware-network/aware-sdk"
Documentation = "https://github.com/aware-network/aware-sdk/tree/main/modules/ontology/runtime/README.md"
Changelog = "https://github.com/aware-network/aware-sdk/tree/main/modules/ontology/runtime/CHANGELOG.md"
Issues = "https://github.com/aware-network/aware-sdk/issues"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aware_ontology"]
include = [
  "README.md",
  "LICENSE"
]

[tool.aware.tests]
requires_module = "ontology"
