[project]
name = "aware-ontology-sdk"
version = "0.1.0"
description = "Ontology SDK facade over generated Ontology Service API Client."
authors = [{ name = "AWARE Team" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aware_ontology_service_api",
  "aware_ontology_service_dto",
  "aware-types",
]

[project.optional-dependencies]
test = [
  "pytest>=8.4.2",
  "pytest-asyncio>=0.23.7",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aware_ontology_sdk"]
include = ["README.md", "aware_ontology_sdk/py.typed"]
