[project]
name = "aware-reactivity"
version = "0.1.0"
description = ""
authors = [
  { name = "Luis Lechuga", email = "luis@aware.run" },
]
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.8.2,<3.0.0",
  "aware-meta",
  "aware-meta-ontology",
  "aware_reactivity_service_dto",
  "aware-utils",
]

[tool.black]
line-length = 120
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max-line-length = 120
extend-ignore = "E266"

[tool.mypy]
plugins = ['pydantic.mypy']
ignore_missing_imports = true

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aware_reactivity"]

[tool.aware.tests]
requires_module = "reactivity"
