[project]
name = "aware-sdk-runtime"
version = "0.1.0"
description = "Aware SDK runtime module."
authors = [{ name = "AWARE Team" }]
requires-python = ">=3.12"
dependencies = [
  "aware-api-ontology",
  "aware-code-ontology",
  "aware-meta-ontology",
  "aware-sdk-ontology",
  "pydantic>=2.8.2,<3.0.0",
  "tree-sitter>=0.24.0,<0.25.0",
  "tree-sitter-aware",
]

[project.optional-dependencies]
test = ["pytest>=8.4.2"]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aware_sdk_runtime"]

[tool.aware.tests]
requires_module = "sdk"
