[project]
name = "aware-storage"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
  { name = "Luis Lechuga", email = "luis@aware.run" },
]
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.8.2,<3.0.0",
  "overrides>=7.7.0,<8.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1.1,<9.0.0",
  "pytest-asyncio>=0.23.6,<0.24.0",
  "mypy>=1.8.0,<2.0.0",
  "flake8>=7.0.0,<8.0.0",
  "black>=24.2.0,<25.0.0",
  "isort>=5.12.0,<6.0.0",
]

[tool.black]
line-length = 120
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 120
known_third_party = []

[tool.flake8]
max-line-length = 120
extend-ignore = "E266"

[tool.mypy]
plugins = ['pydantic.mypy']
ignore_missing_imports = true

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aware_storage"]
include = ["aware_storage/py.typed"]

[tool.aware.tests]
requires_module = "storage"
