[project]
name = "aware-storage-sdk"
version = "0.1.0"
description = "Storage SDK facade over generated Storage Service API client."
authors = [{ name = "AWARE Team" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aware_storage_service_api",
  "aware_storage_service_dto",
]

[project.optional-dependencies]
test = [
  "pytest>=8.4.2",
  "pytest-asyncio>=0.23.7",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aware_storage_sdk"]
include = ["README.md", "aware_storage_sdk/py.typed"]
