[project]
name = "aware_code_service_api"
version = "0.1.0"
description = "Canonical API boundary for Code semantic contracts, package deltas, package layout contracts, and local/remote semantic materialization coordination."
authors = [{ name = "Aware Automations" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aware_code_service_dto",
    "aware-api-client",
    "aware-types",
    "aware-utils",
    "pydantic>=2.8.0,<3.0.0"
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aware_code_service_api"]
include = ["README.md", "aware_code_service_api/py.typed"]
