[project]
name = "aware_code_service_dto"
version = "0.1.0"
description = "Generated API DTO package for code-service-dto."
authors = [{ name = "Aware Automations" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aware-types",
    "aware-utils",
    "pydantic>=2.8.0,<3.0.0"
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aware_code_service_dto"]
include = ["README.md", "aware_code_service_dto/py.typed"]
